--- a/css/Style.css
+++ b/css/Style.css
@@ -3,6 +3,11 @@ font-family: 'Montserrat', sans-serif;
 
     background-color: #F5F7FA;
 }
+
+a{
+    text-decoration: none;
+}
+
 .main-conteiner{
     display: flex;
     flex-direction: row-reverse;
@@ -11,10 +16,12 @@ font-family: 'Montserrat', sans-serif;
     margin: 40px auto;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
+
 /* Main content section */
 .Main-content-section{
     padding: 50px;
 }
+
 .Main-content-title{
     font-style: normal;
     font-weight: bold;
@@ -23,10 +30,12 @@ font-family: 'Montserrat', sans-serif;
     color: #000;
     margin-bottom: 10px;
 }
+
 /* About me section*/
 .about-me-section{
 margin: 0 0 40px 0;
 }
+
 .about-me-profession{
     font-style: normal;
     font-weight: bold;
@@ -35,6 +44,7 @@ margin: 0 0 40px 0;
     color: #000;
     margin-bottom: 20px;
 }
+
 .my-name{
     font-style: normal;
     font-weight: bold;
@@ -43,6 +53,7 @@ margin: 0 0 40px 0;
     color: #000;
     margin-bottom: 20px;
 }
+
 .about-me-discription{
     width: 100%;
     font-style: normal;
@@ -51,24 +62,29 @@ margin: 0 0 40px 0;
     line-height: 24px;
     color: #000;
 }
+
 /* my progects section */
 .my-progects-section{
     margin: 0 0 50px 0;
-       }
+}
+
 .my-progects-list{
     padding: 0 0 0 17px;
 }
+
 .my-progects-item{
     color: black;
     font-weight: bold;
 }
+
 .my-progect-link{
     font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
+    font-weight: bold;
+    font-size: 18px;
     line-height: 24px;
-    color: #595959;
+    color: #f50b0b;
 }
+
 .my-progect-text{
     font-style: normal;
     font-weight: normal;
@@ -76,15 +92,16 @@ margin: 0 0 40px 0;
     line-height: 24px;
     color: #595959;
     margin-left: 5px;
-    
 }
+
 .my-progect-bracket{
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 14px;
     line-height: 24px;   
     color: black; 
 }
+
 /* My Work Experience */
 .my-Work-Experience-company{
     color: #FB6D3A;
@@ -97,32 +114,38 @@ margin: 0 0 40px 0;
     line-height: 20px;
     margin: 0 0 10px 0;
 }
+
 .my-Work-Experience-period{
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 15px;
-    color: #A8A8A8;    
-   }
-  .my-Work-Experience-divider{
+    color: #A8A8A8;
+}
+
+.my-Work-Experience-divider{
     color: #000000;
-  }
-  .my-Work-Experience-Duties{
-      padding: 0 0 0 18px;
-  }
-  .my-Work-Experience-Duty{
+}
+
+.my-Work-Experience-Duties{
+padding: 0 0 0 18px;
+}
+
+.my-Work-Experience-Duty{
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
     color: #595959;
-}   
-   .my-Work-Experience-compani-bloc{
+}
+
+.my-Work-Experience-compani-bloc{
     margin: 0 0 15px 0;
-      }
-      .my-Work-Experience-compani-education{
+}
+
+.my-Work-Experience-compani-education{
         margin: 0 0 40px 0;
-      }
+}
 
 /* My education */
 .My-education-university{
@@ -181,7 +204,7 @@ font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 24px;
-color: #565e6a;
+color: #767b81;
 }
 /* Tech Skills section*/
 .Tech-Skills-list{
