--- a/css/Style.css
+++ b/css/Style.css
@@ -33,16 +33,22 @@ a{
 
 /* About me section*/
 .about-me-section{
-margin: 0 0 40px 0;
+/* margin-left:  -50px;
+margin-right: -50px;
+padding: 30px 50px;
+background-color: #266b5a; */
+
 }
+
 
 .about-me-profession{
     font-style: normal;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 17px;
     color: #000;
     margin-bottom: 20px;
+  
 }
 
 .my-name{
@@ -65,15 +71,15 @@ margin: 0 0 40px 0;
 
 /* my progects section */
 .my-progects-section{
-    margin: 0 0 50px 0;
+    margin: 40px 0 50px 0;
 }
 
 .my-progects-list{
-    padding: 0 0 0 17px;
+    padding: 0 0 0 20px;
 }
 
 .my-progects-item{
-    color: black;
+    color: #000000;
     font-weight: bold;
 }
 
@@ -82,7 +88,7 @@ margin: 0 0 40px 0;
     font-weight: bold;
     font-size: 18px;
     line-height: 24px;
-    color: #FB6D3A;
+    color: #266b5a;
 }
 
 .my-progect-text{
@@ -90,7 +96,7 @@ margin: 0 0 40px 0;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-    color: #595959;
+    color: #000000;
     margin-left: 5px;
 }
 
@@ -99,7 +105,7 @@ margin: 0 0 40px 0;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;   
-    color: black; 
+    color: #000000; 
 }
 
 /* My Work Experience */
@@ -108,7 +114,12 @@ margin: 0 0 40px 0;
 }
 
 .my-Work-Experience-company{
-    color: #FB6D3A;
+    color: #266b5a;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 0 5px 0;
 }
 
 .my-Work-Experience-position{
@@ -116,15 +127,16 @@ margin: 0 0 40px 0;
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
 }
 
 .my-Work-Experience-period{
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
-    color: #A8A8A8;
+    font-size: 14px;
+    line-height: 24px;
+    margin-top: 0;
+    color: #000;
 }
 
 .my-Work-Experience-divider{
@@ -140,7 +152,7 @@ padding: 0 0 0 18px;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-    color: #595959;
+    color: #000;
 }
 
 .my-Work-Experience-compani-bloc{
@@ -165,7 +177,7 @@ padding-left: 20px;
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
-    color: #FB6D3A;
+    color: #266b5a;
     margin: 10px 0 10px 0;
 }
 .My-education-profession{
@@ -176,16 +188,16 @@ padding-left: 20px;
 .My-education-period{
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
-    color: #A8A8A8;
+    color: #000;
     }
     .My-education-divider{
         color: #000000;
     }
 /*sidebar_sections */
 .aside-section{
-    background-color:#233043;
+    background-color:#266b5a;
     width: 370px;
     padding: 40px 0;
 }
@@ -214,21 +226,21 @@ margin-right: 5px;
 .contact-section-link{
 font-style: normal;
 font-weight: normal;
-font-size: 14px;
+font-size: 16px;
 line-height: 24px;
-color: #aeb3b8;
+color: #FFFFFF;
 }
 /* Tech Skills section*/
 .Tech-Skills-list{
 padding-left: 17px ;
 }
 .Tech-Skills-item{
-    color: #FB6D3A
+    color: #266b5a
 }
 .Tech-Skills-item-text{
 font-style: normal;
 font-weight: normal;
-font-size: 14px;
+font-size: 16px;
 line-height: 24px;
 color: #FFFFFF;
 }
@@ -241,12 +253,12 @@ margin: 50px 0 0 40px;
 padding-left: 17px ;
 }
 .Soft-Skills-item{
-color: #FB6D3A
+color: #266b5a
 }
 .Soft-Skills-item-text{
 font-style: normal;
 font-weight: normal;
-font-size: 14px;
+font-size: 16px;
 line-height: 24px;
 color: #FFFFFF;
 
